Rename blog to posts. Fix flex on no aside bug.

--- a/_layouts/body.html
+++ b/_layouts/body.html
@@ -6,8 +6,8 @@ layout: default
 ---
 <body>
   {% include header.html %}
-  <article id="article" class="structure">
-    <div>
+  <article id="article" class="structure container-fluid">
+    <div class="row flex-row">
       <div id="content" class="structure col-xs-12 col-md-9">
         {{ content }}
       </div>
