Fix up social bar.

--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -1,13 +1,14 @@
-{% assign social_sites_db = "bitbucket digg dropbox facebook flickr foursquare github google google-plus instagram jsfiddle linkedin pinterest reddit skype soundcloud spotify stack-exchange stack-overflow steam stumbleupon tumblr twitter vimeo-square vine windows wordpress yahoo youtube" | split:" " %}
+{% comment %}
+social_sites_db = "bitbucket digg dropbox facebook flickr foursquare github gitlab google google-plus instagram jsfiddle linkedin pinterest reddit skype soundcloud spotify stack-exchange stack-overflow steam stumbleupon tumblr twitter vimeo-square vine windows wordpress yahoo youtube" | split:" "
+{% endcomment %}
 <ul class="social-links {{ include.class }}">
-{% for name in social_sites_db %}
-  {% if site.navbar.social[name] %}
-  {% assign link = site.navbar.social[name] %}
+{% for social in site.navbar.social %}
+  {% assign name = social[0]  %}
+  {% assign link = social[1]  %}
   <li>
-    <a href="{{ link }}">
+    <a href="{{ link }}" title="{{ name }}">
       <i class="fa fa-{{ name }} fa-{{ include.size | default: 'lg' }} {% if include.labels %}fa-x-label{% endif -%}"></i>{{ include.separator  }}
     </a>
   </li>
-  {% endif %}
 {% endfor -%}
 </ul>
