--- a/assets/css/structure.css
+++ b/assets/css/structure.css
@@ -9,6 +9,7 @@ html {
   margin: 0;
   padding: 0;
   border: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -28,6 +29,8 @@ footer {
 
 #article {
   flex: 1;
+  padding: 0;
+  margin: 0;
 }
 
 #article, #navbar, #banner, footer *[id|="footer-nav"] {
@@ -46,6 +49,11 @@ footer {
 #aside .btn {
   margin-top: {{ page.my-margin-top }};
   margin-bottom: {{ page.my-margin-bottom }};
+}
+
+.row {
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
 .flex-row {
