Use sass, fix navbar.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,7 +21,20 @@
         {% endfor %}
         </ul>
         {% if site.navbar.social %}
-          {% include social-links.html size="2x" class="nav navbar-nav navbar-right text-right" %}
+          {% comment %}
+          social_sites_db = "bitbucket digg dropbox facebook flickr foursquare github gitlab google google-plus instagram jsfiddle linkedin pinterest reddit skype soundcloud spotify stack-exchange stack-overflow steam stumbleupon tumblr twitter vimeo-square vine windows wordpress yahoo youtube" | split:" "
+          {% endcomment %}
+          <ul class="social-links nav navbar-nav navbar-right text-right">
+          {% for social in site.navbar.social %}
+            {% assign name = social[0]  %}
+            {% assign link = social[1]  %}
+            <li>
+              <a href="{{ link }}" title="{{ name }}">
+                <i class="fa fa-{{ name }} fa-{{ "2x" | default: 'lg' }} {% if page.labels %}fa-x-label{% endif -%}"></i>{{ include.separator  }}
+              </a>
+            </li>
+          {% endfor -%}
+          </ul>
         {% endif %}
       </div>
       {% endif %}
