Tweaks. Stash .github/ wrokflow.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -52,7 +52,13 @@ footer li:not(:first-child):before {
 .navbar {
   border: 0;
   margin-bottom: 0;
+  .container, .navbar-collapse {
+    margin: 0;
+    padding: 0;
+  }
 }
+
+
 
 html {
   height: 100%;
