--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,15 +1,22 @@
 <div id="navbar" class="structure">
   <nav class="navbar navbar-default navbar-inverse">
     <div class="container">
-      {% if site.navbar.logo %}
-      <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
+      {% if site.navbar.logo %}
+        <!-- Brand and toggle get grouped for better mobile display -->
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" style="padding:0" href="{{ "/" | relative_url }}"><img src="{{ site.navbar.logo | relative_url }}" alt="home" /></a>
-      </div>
+        <a class="navbar-brand" style="padding:0" href="{{ "/" | relative_url }}"><img src="{{ site.navbar.logo | relative_url }}" style='height:100%' alt="home" /></a>
       {% endif %}
+      {% if site.navbar.home-icon %}
+        <ul class="social-links nav navbar-nav navbar-right">
+          <li>
+            <a href="/" title=""><i class="fa fa-home fa-{{ "2x" | default: 'lg' }}"></i>{{ include.separator  }}</a>
+          </li>
+        </ul>
+      {% endif %}
+      </div>
       {% if site.navbar.menu %}
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
