Make customizations to base theme.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
   <head>
     <title>{{ site.title }}</title>
     <meta charset="utf-8" />
+    <link rel="icon" href="data:;" />
     <script src="{{ "node_modules/jquery/dist/jquery.min.js" | relative_url }}"></script>
     <script src="{{ "node_modules/bootstrap/dist/js/bootstrap.min.js" | relative_url }}"></script>
     <link rel="stylesheet" href="{{ "node_modules/bootstrap/dist/css/bootstrap.css"  | relative_url }}"/>
